--- a/notes.html
+++ b/notes.html
@@ -208,7 +208,11 @@ MathJax.Hub.Config({
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle Q={\frac {1}{2m}}\sum _{vw}\left[A_{vw}-{\frac {k_{v}k_{w}}{2m}}\right]{\frac {s_{v}s_{w}+1}{2}}}</annotation>
   </semantics>
+<div class="infoblock">
+<div class="blockcontent"> 	
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/8e096ae354b71e8f393f412cf84b856d5efa84c3" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -3.005ex; width:37.893ex; height:6.676ex;" alt="{\displaystyle Q={\frac {1}{2m}}\sum _{vw}\left[A_{vw}-{\frac {k_{v}k_{w}}{2m}}\right]{\frac {s_{v}s_{w}+1}{2}}}"></span></div>
+</div>
+</div>	
 </td>
 <td style="vertical-align:middle; width:99%; border:none; padding:0.08em;">
 <div style="margin:0;">
@@ -346,7 +350,11 @@ MathJax.Hub.Config({
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle Q={\frac {1}{(2m)}}\sum _{vw}\left[A_{vw}-{\frac {k_{v}k_{w}}{(2m)}}\right]\delta (c_{v},c_{w})=\sum _{i=1}^{c}(e_{ii}-a_{i}^{2})}</annotation>
   </semantics>
+<div class="infoblock">
+<div class="blockcontent"> 
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/1355207520385cde997b9e4f49ee8a1b9ce96061" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -3.005ex; width:54.576ex; height:6.843ex;" alt="{\displaystyle Q={\frac {1}{(2m)}}\sum _{vw}\left[A_{vw}-{\frac {k_{v}k_{w}}{(2m)}}\right]\delta (c_{v},c_{w})=\sum _{i=1}^{c}(e_{ii}-a_{i}^{2})}"></span></div>
+</div>
+</div>	
 </td>
 <td style="vertical-align:middle; width:99%; border:none; padding:0.08em;">
 <div style="margin:0;">
