--- a/notes.html
+++ b/notes.html
@@ -440,7 +440,11 @@ MathJax.Hub.Config({
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle e_{ij}=\sum _{vw}{\frac {A_{vw}}{2m}}1_{v\in c_{i}}1_{w\in c_{j}}}</annotation>
   </semantics>
+<div class="infoblock">
+<div class="blockcontent"> 	
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/0567c485cdc51fcbecf94e0d64c7e89ecf2a6498" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -3.005ex; width:23.906ex; height:6.509ex;" alt="e_{{ij}}=\sum _{{vw}}{\frac  {A_{{vw}}}{2m}}1_{{v\in c_{i}}}1_{{w\in c_{j}}}"></span></dd></dl>
+</div>
+</div>	
 <p>and <i>a</i><sub><i>i</i></sub> is the fraction of ends of edges that are attached to vertices in community <i>i</i>:
 </p>
 <dl><dd><span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle a_{i}={\frac {k_{i}}{2m}}=\sum _{j}e_{ij}}">
