--- a/notes.html
+++ b/notes.html
@@ -1359,7 +1359,7 @@ MathJax.Hub.Config({
 </p>
 
 <h3>References</h3>
-<p>A few exercises which can be tried out to fully internalize the concept:</p>
+<p>Lecture Notes and Readings:</p>
 <ol>
 <li><p><a href="https://ocw.mit.edu/courses/20-453j-biomedical-information-technology-fall-2008/"> 1.022: Biomedical Information Technology </a></p>
 </li>	
