--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">S. Chatterjee</div>
 <div class="menu-item"><a href="index.html">About</a></div>
-<div class="menu-item"><a href="cv.html">Bio</a></div>
+<!-- <div class="menu-item"><a href="cv.html">Bio</a></div> -->
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="notes.html">Notes</a></div>
 <div class="menu-item"><a href="contact.html" class="current">Contact</a></div>
