--- a/notes.html
+++ b/notes.html
@@ -482,9 +482,9 @@ MathJax.Hub.Config({
 </span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/e2a13da0e7049effd022242d91217c7cf6b16558" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -3.338ex; width:18.568ex; height:6.843ex;" alt="a_{i}={\frac  {k_{i}}{2m}}=\sum _{{j}}e_{{ij}}">
 </span></dd>
 </dl>
-
 	
-<p> Modularity is a measure of the structure of networks or graphs which measures the strength of division of a network into modules (also called groups, clusters or communities). Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules. Modularity is often used in optimization methods for detecting community structure in networks. Biological networks, including animal brains, exhibit a high degree of modularity. However, modularity maximization is not statistically consistent, and finds communities in its own null model, i.e. fully random graphs, and therefore it cannot be used to find statistically significant community structures in empirical networks. Furthermore, it has been shown that modularity suffers a resolution limit and, therefore, it is unable to detect small communities.</p>	
+<p> However, modularity maximization is not statistically consistent, and finds communities in its own null model, i.e. fully random graphs, and therefore it cannot be used to find statistically significant community structures in empirical networks. Furthermore, it has been shown that modularity suffers a resolution limit and, therefore, it is unable to detect small communities.</p>	
+
 <h2>Example</h2>
 <p>When comparing modularity optimization methods, the two measures of importance are the speed and the resulting modularity value. A higher speed is better as it shows a method is more efficient than others and a higher modularity value is desirable as it points to having better-defined communities. The compared methods are the algorithm of Clauset, Newman, and Moore, Pons and Latapy, and Wakita and Tsurumi.</p>
 
