--- a/notes.html
+++ b/notes.html
@@ -1361,7 +1361,7 @@ MathJax.Hub.Config({
 <h3>References</h3>
 <p>Lecture Notes and Readings:</p>
 <ol>
-<li><p><a href="https://ocw.mit.edu/courses/20-453j-biomedical-information-technology-fall-2008/"> 1.022: Biomedical Information Technology </a></p>
+<li><p><a href="https://ocw.mit.edu/courses/20-453j-biomedical-information-technology-fall-2008/"> 20.453J: Biomedical Information Technology </a></p>
 </li>	
 <li><p><a href="https://ocw.mit.edu/courses/1-022-introduction-to-network-models-fall-2018/"> 1.022: Introduction To Network Models </a></p>
 </li>	
