--- a/notes.html
+++ b/notes.html
@@ -111,7 +111,7 @@ MathJax.Hub.Config({
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/714966b5af9c40432b96b365e9575c24e915f7c7" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -1.838ex; width:12.487ex; height:5.343ex;" alt="{\displaystyle A_{vw}-{\frac {k_{v}k_{w}}{2m}}}"></span>
 </div>
 </div>
-</p><p>Summing over all node pairs gives the equation for modularity, <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle Q}">
+</p><p>Summing over all node pairs gives the equation for modularity, <math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle Q}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
       <mstyle displaystyle="true" scriptlevel="0">
