--- a/notes.html
+++ b/notes.html
@@ -112,7 +112,7 @@ MathJax.Hub.Config({
 </div>
 </div>
 </p><p>Summing over all node pairs gives the equation for modularity,
-</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/8752c7023b4b3286800fe3238271bbca681219ed" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.671ex; width:1.838ex; height:2.509ex;" alt="Q"></span>.<sup id="cite_ref-npnas_1-2" class="reference"><a href="#cite_note-npnas-1">&#91;1&#93;</a></sup>
+</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/8752c7023b4b3286800fe3238271bbca681219ed" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.671ex; width:1.838ex; height:2.509ex;" alt="Q"></span>.
 </p>
 <dl><dd>
 <table role="presentation" style="border-collapse:collapse; margin:0; border:none;">
