--- a/notes.html
+++ b/notes.html
@@ -218,9 +218,9 @@ MathJax.Hub.Config({
 </td></tr></tbody></table>
 </div>
 </td>
-<td style="vertical-align:middle; border:none; padding:0.08em;" class="nowrap"><p style="margin:0pt;"><b>(<span id="math_3" class="reference nourlexpansion" style="font-weight:bold;">3</span>)</b></p>
+<td style="vertical-align:middle; border:none; padding:0.08em;" class="nowrap"><p style="margin:0pt;"></p>
 </td></tr></tbody></table></dd></dl>
-<p>It is important to note that <b><a href="#math_3">Eq. 3</a></b> holds good for partitioning into two communities only. Hierarchical partitioning (i.e. partitioning into two communities, then the two sub-communities further partitioned into two smaller sub communities only to maximize <i>Q</i>) is a possible approach to identify multiple communities in a network. Additionally, (3) can be generalized for partitioning a network into <i>c</i> communities.<sup id="cite_ref-community_6-0" class="reference"><a href="#cite_note-community-6">&#91;6&#93;</a></sup>
+<p>It is important to note that the above equation holds good for partitioning into two communities only. Hierarchical partitioning (i.e. partitioning into two communities, then the two sub-communities further partitioned into two smaller sub communities only to maximize <i>Q</i>) is a possible approach to identify multiple communities in a network. Additionally, (3) can be generalized for partitioning a network into <i>c</i> communities.<sup id="cite_ref-community_6-0" class="reference"><a href="#cite_note-community-6">&#91;6&#93;</a></sup>
 </p>
 <dl><dd>
 <table role="presentation" style="border-collapse:collapse; margin:0; border:none;">
