--- a/notes.html
+++ b/notes.html
@@ -356,7 +356,7 @@ MathJax.Hub.Config({
 </td></tr></tbody></table>
 </div>
 </td>
-<td style="vertical-align:middle; border:none; padding:0.08em;" class="nowrap"><p style="margin:0pt;"><b>(<span id="math_4" class="reference nourlexpansion" style="font-weight:bold;">4</span>)</b></p>
+<td style="vertical-align:middle; border:none; padding:0.08em;" class="nowrap"><p style="margin:0pt;"></p>
 </td></tr></tbody></table></dd></dl>
 <p>where <i>e</i><sub><i>ij</i></sub> is the fraction of edges with one end vertices in community <i>i</i> and the other in community <i>j</i>:
 </p>
