--- a/notes.html
+++ b/notes.html
@@ -220,7 +220,7 @@ MathJax.Hub.Config({
 </td>
 <td style="vertical-align:middle; border:none; padding:0.08em;" class="nowrap"><p style="margin:0pt;"></p>
 </td></tr></tbody></table></dd></dl>
-<p>It is important to note that the above equation holds good for partitioning into two communities only. Hierarchical partitioning (i.e. partitioning into two communities, then the two sub-communities further partitioned into two smaller sub communities only to maximize <i>Q</i>) is a possible approach to identify multiple communities in a network. Additionally, the above equation can be generalized for partitioning a network into <i>c</i> communities.
+<p>It is important to note that the above equation holds good for partitioning into two communities only. Hierarchical partitioning (i.e. partitioning into two communities, then the two sub-communities further partitioned into two smaller sub communities only to maximize <i>Q</i>) is a possible approach to identify multiple communities in a network. Additionally, the above equation can be generalized for partitioning a network into <i>c</i> communities as given below.
 </p>
 <dl><dd>
 <table role="presentation" style="border-collapse:collapse; margin:0; border:none;">
