--- a/notes.html
+++ b/notes.html
@@ -565,7 +565,7 @@ MathJax.Hub.Config({
 </table>
 
 <h2>The Algorithm</h2>	
-<p>The value to be optimized is <a href="/wiki/Modularity_(networks)" title="Modularity (networks)">modularity</a>, defined as a value in the range <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle [-1/2,1]}">
+<p>The value to be optimized is modularity, defined as a value in the range <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle [-1/2,1]}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
       <mstyle displaystyle="true" scriptlevel="0">
@@ -583,7 +583,7 @@ MathJax.Hub.Config({
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle [-1/2,1]}</annotation>
   </semantics>
-</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/4d86a9a796905d499b4ee39d0bcbfecbc4509c48" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.838ex; width:8.786ex; height:2.843ex;" alt="{\displaystyle [-1/2,1]}"></span> that measures the density of links inside communities compared to links between communities.<sup id="cite_ref-Louvain_1-1" class="reference"><a href="#cite_note-Louvain-1">&#91;1&#93;</a></sup> For a weighted graph, modularity is defined as:
+</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/4d86a9a796905d499b4ee39d0bcbfecbc4509c48" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.838ex; width:8.786ex; height:2.843ex;" alt="{\displaystyle [-1/2,1]}"></span> that measures the density of links inside communities compared to links between communities. For a weighted graph, modularity is defined as:
 </p><p><span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle Q={\frac {1}{2m}}\sum \limits _{ij}{\bigg [}A_{ij}-{\frac {k_{i}k_{j}}{2m}}{\bigg ]}\delta (c_{i},c_{j}),}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
@@ -803,7 +803,7 @@ MathJax.Hub.Config({
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle \delta }</annotation>
   </semantics>
-</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/c5321cfa797202b3e1f8620663ff43c4660ea03a" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.338ex; width:1.049ex; height:2.343ex;" alt="\delta "></span> is <a href="/wiki/Kronecker_delta" title="Kronecker delta">Kronecker delta function</a> (<span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle \delta (x,y)=1}">
+</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/c5321cfa797202b3e1f8620663ff43c4660ea03a" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.338ex; width:1.049ex; height:2.343ex;" alt="\delta "></span> is Kronecker delta function (<span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle \delta (x,y)=1}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
       <mstyle displaystyle="true" scriptlevel="0">
