--- a/notes.html
+++ b/notes.html
@@ -113,9 +113,7 @@ MathJax.Hub.Config({
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle k_{w}}</annotation>
   </semantics>
-</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/9da67a408320846d366d6cc19a1ed435ba9bb37d" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.671ex; width:2.62ex; height:2.509ex;" alt="k_w"></span> respectively, from a randomly rewired network as described above. We calculate the expected number of full edges between these nodes.
-</p>
-<p>Many texts then make the following approximations, for random networks with a large number of edges. When <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle m}">
+</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/9da67a408320846d366d6cc19a1ed435ba9bb37d" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.671ex; width:2.62ex; height:2.509ex;" alt="k_w"></span> respectively, from a randomly rewired network as described above. We calculate the expected number of full edges between these nodes. Many texts then make the following approximations, for random networks with a large number of edges. When <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle m}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
       <mstyle displaystyle="true" scriptlevel="0">
@@ -236,7 +234,7 @@ MathJax.Hub.Config({
     <annotation encoding="application/x-tex">{\displaystyle {\frac {k_{v}k_{w}}{2m}}}</annotation>
   </semantics>
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/a0d43b1542897bbdfc4fb40dbf474affdea395e9" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -1.838ex; width:5.697ex; height:5.343ex;" alt="{\displaystyle {\frac {k_{v}k_{w}}{2m}}}"></span>.
-</p>	
+</p>
 <p><span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle A_{vw}-{\frac {k_{v}k_{w}}{2m}}}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
