--- a/notes.html
+++ b/notes.html
@@ -234,8 +234,7 @@ MathJax.Hub.Config({
     <annotation encoding="application/x-tex">{\displaystyle {\frac {k_{v}k_{w}}{2m}}}</annotation>
   </semantics>
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/a0d43b1542897bbdfc4fb40dbf474affdea395e9" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -1.838ex; width:5.697ex; height:5.343ex;" alt="{\displaystyle {\frac {k_{v}k_{w}}{2m}}}"></span>.
-</p>
-<p><span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle A_{vw}-{\frac {k_{v}k_{w}}{2m}}}">
+<span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle A_{vw}-{\frac {k_{v}k_{w}}{2m}}}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
       <mstyle displaystyle="true" scriptlevel="0">
