--- a/notes.html
+++ b/notes.html
@@ -120,7 +120,7 @@ MathJax.Hub.Config({
           <mi>A</mi>
           <mrow class="MJX-TeXAtom-ORD">
             <mi>v</mi>
-            <mi>w</mi>
+            <mi>w</emi>
           </mrow>
         </msub>
         <mo>=</mo>
@@ -300,7 +300,7 @@ MathJax.Hub.Config({
     <annotation encoding="application/x-tex">{\displaystyle w}</annotation>
   </semantics>
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/88b1e0c8e1be5ebe69d18a8010676fa42d7961e6" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.338ex; width:1.664ex; height:1.676ex;" alt="w"></span> as <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle {\frac {k_{v}k_{w}}{2m}}}">
-<p>Hence, the difference between the actual number of edges between node <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle v}">
+Hence, the difference between the actual number of edges between node <span class="mwe-math-element"><span class="mwe-math-mathml-inline mwe-math-mathml-a11y" style="display: none;"><math xmlns="http://www.w3.org/1998/Math/MathML"  alttext="{\displaystyle v}">
   <semantics>
     <mrow class="MJX-TeXAtom-ORD">
       <mstyle displaystyle="true" scriptlevel="0">
@@ -319,7 +319,6 @@ MathJax.Hub.Config({
     <annotation encoding="application/x-tex">{\displaystyle w}</annotation>
   </semantics>
 </math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/88b1e0c8e1be5ebe69d18a8010676fa42d7961e6" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.338ex; width:1.664ex; height:1.676ex;" alt="w"></span> and the expected number of edges between them is
-</p>
 <semantics>
     <mrow class="MJX-TeXAtom-ORD">
       <mstyle displaystyle="true" scriptlevel="0">
